--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #fff;
   font-family: "Poppins", sans-serif;
@@ -10,7 +14,6 @@ h1 {
 #header {
   height: 200px;
   padding: 50px 0;
-  box-sizing: border-box;
 }
 
 .container {
@@ -36,10 +39,17 @@ h1 {
 }
 
 #header #menu .menu-list .menu-list-item a {
-  color: #b3936c;
+  color: #ba8352;
   font-size: 21px;
   font-weight: 500;
   line-height: 24px;
+  padding: 5px;
+}
+
+#header #menu .menu-list .menu-list-item a:hover {
+  background-color: #ffd476;
+  transition: 0.8s;
+  color: #fdfdfd;
 }
 
 #header .user-search {
@@ -49,25 +59,39 @@ h1 {
 }
 
 #header .user-search .search input {
-  background-color: #f6efe6;
+  background-color: #fdfdfd;
   width: 350px;
   height: 40px;
+  border: 1px dashed rgb(255, 212, 118, 0.6);
   border-radius: 20px;
   padding: 10px 0 5px 30px;
-  box-sizing: border-box;
 }
 
 #header .user-search .search input::placeholder {
-  color: #c29861;
+  color: #ba8352;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
 }
 
+#header .user-search .search-btn i {
+  position: absolute;
+  z-index: 1;
+  right: 200px;
+  top: 95px;
+  font-size: 18px;
+  color: #ba8352;
+}
+
+#header .user-search .search-btn i:hover {
+  color: #e0a0b8;
+  transition: 0.8s;
+}
+
 #header .user-search .user button {
   width: 45px;
   height: 45px;
-  background-color: #edba9a;
+  background-color: #ffd476;
   border-radius: 23px;
 }
 
@@ -76,112 +100,59 @@ h1 {
 }
 
 #content {
-  padding-top: 20px;
+  padding: 20px 0 60px 0;
 }
 
-#content .container-info {
-  flex: 2;
-}
-
-#content .container-info .content-head {
-  max-width: 490px;
-}
-
-#content .container-info .content-head .content-head-tittle {
+#content .content-head .content-head-tittle {
   font-size: 68px;
   font-weight: 600;
-  color: #d48bab;
-  line-height: 1.5;
-  padding-bottom: 60px;
-  box-sizing: border-box;
+  color: #e0a0b8;
+  line-height: 1.2;
+  margin-bottom: 40px;
 }
 
-#content .container-info .content-head .content-head-desc {
-  color: #c3ac5b;
+#content .content-head .content-head-desc {
   font-size: 27px;
-  line-height: 27px;
   font-weight: 300;
-  letter-spacing: 12px;
+  letter-spacing: 10px;
   text-transform: uppercase;
-  max-width: 709px;
-  position: absolute;
-  z-index: 1;
-  padding-bottom: 40px;
-  box-sizing: border-box;
+  color: #c3ac5b;
+  line-height: 1;
+  margin-bottom: 40px;
 }
 
-#content .container-info .desc-product {
-  background-color: #f6efe6;
-  width: 256px;
-  height: 105px;
+#content .content-info .desc-product {
+  background-color: #fdfdfd;
+  color: #ba8352;
+  width: 360px;
+  height: 160px;
+  padding: 15px;
   border-radius: 20px;
-  padding: 10px;
-  box-sizing: border-box;
-  margin: 70px 0 35px;
-}
-
-#content .container-info .desc-product p {
-  color: #c29861;
-  font-size: 17px;
-  font-weight: 500;
-  line-height: 27px;
-}
-
-#content .container-info .btn {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-#content .container-info .btn .icon-bag {
-  width: 60px;
-  height: 60px;
-  border-radius: 30px;
-  background-color: #f6efe6;
-  text-align: center;
-  position: absolute;
-  left: 130px;
-}
-
-#content .container-info .btn .icon-bag img {
-  max-width: 70%;
-  padding: 8px;
-  box-sizing: border-box;
-}
-
-#content .container-info .btn button {
-  width: 280px;
-  height: 85px;
-  box-sizing: border-box;
-  padding: 10px 10px 10px 45px;
-  border-radius: 140px;
-  background-color: #bc9a62;
-  box-shadow: 1px 3px 15px rgba(103, 100, 97, 0.7);
-  color: #fff;
-  font-size: 36px;
-  line-height: 36px;
-  font-weight: 500;
+  border: 1px dashed rgb(255, 212, 118, 0.6);
 }
 
 #content .container-photo {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
-  flex: 1;
+}
+
+#content .container-photo .circles {
+  display: flex;
+  align-items: center;
 }
 
 #content .container-photo .circle-big {
-  width: 490px;
-  height: 490px;
-  border-radius: 285px;
+  width: 450px;
+  height: 450px;
+  border-radius: 225px;
+
   background-image: url(../jpg/amy-shamblen-78r9kgp1-Tk-unsplash.jpg);
   background-position: center;
   background-size: cover;
-  opacity: 0.9;
   transform: scaleX(-1);
   margin-right: 25px;
 }
-
 #content .container-photo .circle-group {
   display: flex;
   flex-direction: column;
